--- a/config/config.env
+++ b/config/config.env
@@ -8,3 +8,4 @@ COOKIE_EXPIRE=7
 CLOUDINARY_CLOUD_NAME=dnz7m6zyj
 CLOUDINARY_API_KEY=974912853117811
 CLOUDINARY_API_SECRET=2IU2oBzE7dGw1vwP6ySeLK4Z-d8
+MAINTENANCE_MODE=false
